fixed overflow on mouse leave

--- a/style.css
+++ b/style.css
@@ -20,6 +20,6 @@ div.container {
 
 canvas {
   background-color: rgb(255, 255, 255);
-  border: 5px solid black;
+  border: 5px solid darkgrey;
 }
   
